--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -2,6 +2,13 @@ FROM node:15
 
 WORKDIR /usr/src/app
 
+RUN apt-get update && apt-get install -y wget
+
+ENV DOCKERIZE_VERSION v0.6.1
+RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+
 COPY ./src/package*.json ./
 
 RUN npm install
@@ -10,4 +17,4 @@ COPY ./src .
 
 EXPOSE 3000
 
-CMD ["node", "index.js"]
+# ENTRYPOINT ["node", "index.js"]
