--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
   node:
     build:
       context: ./node
+    image: diltheyaislan/node:prod
     container_name: node
     entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh node index.js
     networks: 
@@ -23,6 +24,8 @@ services:
       - nodenet
     ports:
       - "8080:80"
+    depends_on: 
+      - node
   
   db:
     image: mysql:5.7
